# Kalidous-Lang

./: .clang-format  .gitignore  CMakeLists.txt  KalidousConfig.cmake.in  README.md  ReadMe.md  Type rules.txt  dain-docs.html  docs-architecture.md  install.ps1  install.sh  main.cpp  proto.nova  test.nova  wrangler.jsonc
.cache/clangd/index/: CLI.cpp.F196D511E4020621.idx  arena.hpp.94FE8BA9B8AF95B3.idx  arena.hpp.FA5624C0BE6A3BED.idx  arena_c_functions.c.DA742CB57988A089.idx  ast.cpp.67CFC75B56C5AE11.idx  ast.cpp.6E2AB5571B4CF102.idx  ast.h.DC9EB020E1009CCA.idx  debug.h.37FF2C1FE317923E.idx  debug.h.8FB63A69A3340DC9.idx  diagnostics.cpp.2A6BE2C74E3DBD1B.idx  diagnostics.cpp.67CA413878C5A718.idx  diagnostics.hpp.63BF3596AD87CDAF.idx  diagnostics.hpp.8DB85E88785AA254.idx  file.c.D43DAEB8804BC34D.idx  keywords.cpp.C454C7E10A2DDFB3.idx  main.cpp.7AB2D89E5F34035F.idx  module_registry.hpp.D859239B97732ED0.idx  parser.cpp.2FF9F8FEDA299798.idx  parser.cpp.4329662634CD735D.idx  parser.h.8DBD24939C4F4E2B.idx  parser.h.ADB6B1E407D377BA.idx  parser_context.hpp.EE20B0250F3430D9.idx  parser_decl.cpp.01522F11B5316C11.idx  parser_decl.cpp.E6249F0D9488B073.idx  parser_expr.cpp.5A0555372EA01EE4.idx  parser_expr.cpp.8EDBCF86709FB377.idx  parser_utils.cpp.60D8CFF4DE39E100.idx  parser_utils.cpp.8B49E67F5A05CE59.idx  symbol_resolver.hpp.F4AF44A4FA5DC33E.idx  test_import_system.cpp.7B8DE04C5CC19162.idx  test_main.cpp.5A474F1A06540704.idx  test_parser.cpp.5BE36EFB6B883FC2.idx  tokenizer.cpp.A032994C9E0BEC5F.idx  types.hpp.3E96C447AAF45150.idx  types.hpp.4A18B42B95141534.idx  utils.hpp.7A73C17AAD85DC69.idx  zith.hpp.F3C24657C5F9D443.idx
.github/scoop/: kalidous.json
.github/scoop/bucket/: kalidous.json  zith.json
.github/workflows/: buil-release.yml  build-release.yml  build.yml  create-release.yml  release.yml  scoop-hash.yml  tag.yml  update-scoop.yml
.qwen/: settings.json
docs/: 404.html  CNAME  Philosopy.md  README.md  ReadMe.md  index.html  sitemap.xml
docs/assets/css/: style.css  styles.32ed2244.css  styles.b1d25d7e.css
docs/assets/js/: 0058b4c6.af4e4a0f.js  04826460.0531204b.js  04826460.bd1b8ac5.js  093e2a3c.3f941023.js  093e2a3c.df839422.js  0a5567ef.18248047.js  0a5567ef.41f64c18.js  0d531dad.3b2b5d8e.js  0d531dad.ecca339a.js  0ed3805f.9a760db4.js  0ed3805f.a00988a2.js  114f70ad.3cb6b0e4.js  1a16542c.4ec4c5f7.js  1a16542c.b539c3c2.js  1ae92706.9d382b24.js  1ae92706.a5aab74b.js  212fe706.00fadae0.js  212fe706.a1f7550d.js  2ce28710.291b56bc.js  2ce28710.ea4bff15.js  2f77e8f3.37b77eae.js  2f77e8f3.aff27800.js  31cbe907.25098c48.js  31cbe907.4e7d850d.js  33fa7447.5e652739.js  33fa7447.f7c57f84.js  361771dc.4130d756.js  361771dc.a6103c0c.js  3707c695.7cc9b3cb.js  3707c695.bd32f26a.js  37ca5e07.548205d1.js  37ca5e07.d4b4d98b.js  39b4c2c9.561ab297.js  39b4c2c9.b5506876.js  39ddb24d.486565bf.js  39ddb24d.ace0c020.js  39ddb24d.b022b69b.js  409c6691.66b20241.js  409c6691.f3f80d4b.js  417b080a.1a3ef5a4.js  (+156 more)
docs/docs/advanced/: data-structures.html  generics-deep.html  how-to-use.html  macros.html  metaprogramming.html  overview.html  raw-pointers.html  traits.html  unsafe.html
docs/docs/cli/: build.html  check-command.html  check.html  clean.html  compile.html  docs.html  flags.html  fmt.html  new.html  overview.html  repl.html  run.html  struf-command.html
docs/docs/faq/: overview.html  philosophy.html  rust-comparison.html  security.html  use-cases.html
docs/docs/intro/: installation.html  overview.html  quickstart.html  why-zith.html
docs/docs/language/: concurrency.html  contexts.html  control-flow.html  ecs.html  errors.html  functions.html  generics.html  intrinsics.html  memory.html  modules.html  overview.html  ownership.html  packs.html  spec-core-topics.html  syntax.html  types.html  variables.html
docs/docs/project/: overview.html
docs/docs/quickstart/: quickstart.html
docs/docs/reference/: stdlib.html
docs/pages/: installation.html  intro.html  quickstart.html
docs/pages/cli/: build.html  check.html  compile.html
docs/pages/language/: control-flow.html  errors.html  functions.html  generics.html  memory.html  modules.html  syntax.html  types.html  variables.html
docs/pages/project/: toml.html
docsaurus/: docs.sh  docusaurus.config.js  sidebars.js
docsaurus/docs/advanced/: 01-overview.md  _category_.json
docsaurus/docs/cli/: 01-overview.md  _category_.json
docsaurus/docs/faq/: 01-overview.md
docsaurus/docs/intro/: 01-overview.md  _category_.json  installation.md  why-zith.md
docsaurus/docs/language/: 01-overview.md  _category_.json  concurrency.md  contexts.md  ecs.md  intrinsics.md  ownership.md  packs.md
docsaurus/src/pages/: index.js  (+1 more)
docusaurus/: docusaurus.config.js
docusaurus-docs/: package.json
example/: prototype.nova
examples/: 01_basics.kali  01_basics.zith  02_flow_control.zith  03_lifecycle.kali  03_lifecycle.zith  04_error_handling.kali  04_error_handling.zith  README.md
examples/dev/: README.md  prototype.kali  prototype.zith  small.kali  small.zith
examples/start/: README.md
impl/: main.cpp
impl/ast/: ast.cpp  ast.h  parser.cpp  parser.h
impl/cli/: CLI.cpp  README.md
impl/import/: README.md  import.hpp  module_registry.hpp  symbol_resolver.hpp  symbol_table.hpp
impl/interface/: CLI.cpp
impl/lexer/: debug.h  keywords.cpp  tokenizer.cpp
impl/memory/: arena.hpp  arena_c_functions.c  arena_c_functions.h  file.c  utils.h
impl/parser/: keywords.cpp  parser.cpp  parser.h  parser_decl.cpp  tokenizer.cpp
impl/utils/: debug.h
include/: README.md
include/Kalidous/: kalidous.h
include/LLVM/: LLVM.hpp  README.md  codegen.hpp  ir.hpp  optimizer.hpp
include/Nova/: core.h  dain.h  nova.h
include/kalidous/: kalidous.h  kalidous.hpp
include/zith/: README.md  zith.hpp
internal/: CLI.h  core.h  debug.h  file.h  helpers.h  maps.h  parser.h  perfect_hash.h  tokenizer.h  tokens.h  tokens_map.h
lith/: CMakeLists.txt
mylibs/io/: console.zith
src/: main.cpp
tests/: SPEC_import_system.md  prototype.kali  prototype.nova  test_expand_sema.cpp  test_import_system.cpp  test_parser.cpp
tests/modules/: README.md
(+57 files in other folders)
